Fix TOC hamburger on mobile, remember manual ver.

--- a/_sass/_surge.scss
+++ b/_sass/_surge.scss
@@ -1012,8 +1012,6 @@ thead {
     }
     .toggle {
         display: initial;
-        top: 20px;
-        left: 90px;
         background-color: #ff9000;
         border: 0;
         cursor: pointer;
@@ -2341,7 +2339,7 @@ select {
     }
 
     #manualLinks {
-        margin-right: 0rem;
+        margin-right: 0.5rem;
     }
 
     .oscheading {
